edit: synchronized the '!cmd' command with the last command changes