@@ -5,12 +5,16 @@ import kz.ilotterytea.bot.api.commands.Command;
 import kz.ilotterytea.bot.api.permissions.Permissions;
 import kz.ilotterytea.bot.entities.CustomCommand;
 import kz.ilotterytea.bot.entities.channels.Channel;
+import kz.ilotterytea.bot.entities.permissions.Permission;
 import kz.ilotterytea.bot.entities.permissions.UserPermission;
 import kz.ilotterytea.bot.entities.users.User;
 import kz.ilotterytea.bot.i18n.LineIds;
-import kz.ilotterytea.bot.models.ArgumentsModel;
 import kz.ilotterytea.bot.utils.HibernateUtil;
+import kz.ilotterytea.bot.utils.ParsedMessage;
+
 import org.hibernate.Session;
+
+import com.github.twitch4j.chat.events.channel.IRCMessageEvent;
 
 import java.util.*;
 import java.util.stream.Collectors;
@@ -20,7 +24,7 @@ import java.util.stream.Collectors;
  * @author ilotterytea
  * @since 1.1
  */
-public class CustomCommandControl extends Command {
+public class CustomCommandControl implements Command {
     @Override
     public String getNameId() { return "cmd"; }
 
@@ -28,101 +32,86 @@ public class CustomCommandControl extends Command {
     public int getDelay() { return 5000; }
 
     @Override
-    public Permissions getPermissions() { return Permissions.USER; }
+    public Permission getPermissions() { return Permission.USER; }
 
     @Override
-    public ArrayList<String> getOptions() { return new ArrayList<>(Arrays.asList("no-mention")); }
+    public List<String> getOptions() { return Collections.singletonList("no-mention"); }
 
     @Override
-    public ArrayList<String> getSubcommands() { return new ArrayList<>(Arrays.asList("new", "edit", "delete", "rename", "copy", "toggle", "list")); }
+    public List<String> getSubcommands() { return List.of("new", "edit", "delete", "rename", "copy", "toggle", "list"); }
 
     @Override
-    public ArrayList<String> getAliases() { return new ArrayList<>(Arrays.asList("scmd", "custom", "command", "команда")); }
+    public List<String> getAliases() { return List.of("scmd", "custom", "command", "команда"); }
 
     @Override
-    public String run(ArgumentsModel m) {
-        Session session = HibernateUtil.getSessionFactory().openSession();
+    public Optional<String> run(IRCMessageEvent event, ParsedMessage message, Channel channel, User user, UserPermission permission) {
+    	if (message.getMessage().isEmpty()) {
+    		return Optional.ofNullable(Huinyabot.getInstance().getLocale().literalText(
+                    channel.getPreferences().getLanguage(),
+                    LineIds.NO_MESSAGE
+            ));
+    	}
+    	
+        ArrayList<String> s = new ArrayList<>(List.of(message.getMessage().get().split(" ")));
 
-        // Getting local info about the channel:
-        List<Channel> channels = session.createQuery("from Channel where aliasId = :aliasId", Channel.class)
-                .setParameter("aliasId", m.getEvent().getChannel().getId())
-                .getResultList();
-
-        Channel channel = channels.get(0);
-
-        // Getting local info about the user:
-        List<User> users = session.createQuery("from User where aliasId = :aliasId", User.class)
-                .setParameter("aliasId", m.getEvent().getUser().getId())
-                .getResultList();
-
-        User user = users.get(0);
-
-        // Getting info about the permission:
-        List<UserPermission> permissions = session.createQuery("from UserPermission where user = :user AND channel = :channel", UserPermission.class)
-                .setParameter("user", user)
-                .setParameter("channel", channel)
-                .getResultList();
-
-        UserPermission permission = permissions.get(0);
-
-        ArrayList<String> s = new ArrayList<>(Arrays.asList(m.getMessage().getMessage().split(" ")));
-
-        if (m.getMessage().getSubCommand() == null) {
-            return Huinyabot.getInstance().getLocale().literalText(
+        if (message.getSubcommandId().isEmpty()) {
+            return Optional.ofNullable(Huinyabot.getInstance().getLocale().literalText(
                     channel.getPreferences().getLanguage(),
                     LineIds.NO_SUBCMD
-            );
+            ));
         }
 
-        if (m.getMessage().getSubCommand().equals("list")) {
+        if (message.getSubcommandId().get().equals("list")) {
             if (channel.getCommands().isEmpty()) {
-                return Huinyabot.getInstance().getLocale().formattedText(
+                return Optional.ofNullable(Huinyabot.getInstance().getLocale().formattedText(
                         channel.getPreferences().getLanguage(),
                         LineIds.C_CMD_NOCMDS,
                         channel.getAliasName()
-                );
+                ));
             }
 
-            return Huinyabot.getInstance().getLocale().formattedText(
+            return Optional.ofNullable(Huinyabot.getInstance().getLocale().formattedText(
                     channel.getPreferences().getLanguage(),
                     LineIds.C_CMD_SUCCESS_LIST,
                     channel.getAliasName(),
                     channel.getCommands().stream().map(CustomCommand::getName).collect(Collectors.joining(", "))
-            );
+            ));
         }
 
         if (Objects.equals(s.get(0), "")) {
-            return Huinyabot.getInstance().getLocale().literalText(
+            return Optional.ofNullable(Huinyabot.getInstance().getLocale().literalText(
                     channel.getPreferences().getLanguage(),
                     LineIds.NOT_ENOUGH_ARGS
-            );
+            ));
         }
 
 
         final String name = s.get(0);
         s.remove(0);
 
+        Session session = HibernateUtil.getSessionFactory().openSession();
+        
         // If the command was run by a broadcaster:
         if (permission.getPermission().getValue() >= Permissions.BROADCASTER.getId()) {
             Optional<CustomCommand> optionalCustomCommands = channel.getCommands().stream().filter(c -> c.getName().equals(name)).findFirst();
             String response = String.join(" ", s);
 
             if (Objects.equals(response, "")) {
-                return Huinyabot.getInstance().getLocale().literalText(
+                return Optional.ofNullable(Huinyabot.getInstance().getLocale().literalText(
                         channel.getPreferences().getLanguage(),
                         LineIds.C_CMD_NOSECONDARG
-                );
+                ));
             }
 
             // Create a new custom command:
-            if (m.getMessage().getSubCommand().equals("new")) {
+            if (message.getSubcommandId().get().equals("new")) {
                 // Check if a command with the same name already exists:
                 if (optionalCustomCommands.isPresent() || Huinyabot.getInstance().getLoader().getCommand(name).isPresent()) {
-                    return Huinyabot.getInstance().getLocale().formattedText(
+                    return Optional.ofNullable(Huinyabot.getInstance().getLocale().formattedText(
                             channel.getPreferences().getLanguage(),
                             LineIds.C_CMD_ALREADYEXISTS,
                             name
-                    );
+                    ));
                 }
 
                 // Creating a new command and assign it to the channel:
@@ -138,25 +127,25 @@ public class CustomCommandControl extends Command {
                 session.getTransaction().commit();
                 session.close();
 
-                return Huinyabot.getInstance().getLocale().formattedText(
+                return Optional.ofNullable(Huinyabot.getInstance().getLocale().formattedText(
                         channel.getPreferences().getLanguage(),
                         LineIds.C_CMD_SUCCESS_NEW,
                         command.getName()
-                );
+                ));
             }
 
             // If the command not exists:
             if (optionalCustomCommands.isEmpty()) {
-                return Huinyabot.getInstance().getLocale().formattedText(
+                return Optional.ofNullable(Huinyabot.getInstance().getLocale().formattedText(
                         channel.getPreferences().getLanguage(),
                         LineIds.C_CMD_DOESNOTEXISTS,
                         name
-                );
+                ));
             }
 
             CustomCommand command = optionalCustomCommands.get();
 
-            switch (m.getMessage().getSubCommand()) {
+            switch (message.getSubcommandId().get()) {
                 // "Edit a command response" clause:
                 case "edit": {
                     // Setting a new response:
@@ -170,11 +159,11 @@ public class CustomCommandControl extends Command {
                     session.getTransaction().commit();
                     session.close();
 
-                    return Huinyabot.getInstance().getLocale().formattedText(
+                    return Optional.ofNullable(Huinyabot.getInstance().getLocale().formattedText(
                             channel.getPreferences().getLanguage(),
                             LineIds.C_CMD_SUCCESS_EDIT,
                             command.getName()
-                    );
+                    ));
                 }
                 // "Delete a command" clause:
                 case "delete":
@@ -184,11 +173,11 @@ public class CustomCommandControl extends Command {
                     session.getTransaction().commit();
                     session.close();
 
-                    return Huinyabot.getInstance().getLocale().formattedText(
+                    return Optional.ofNullable(Huinyabot.getInstance().getLocale().formattedText(
                             channel.getPreferences().getLanguage(),
                             LineIds.C_CMD_SUCCESS_DELETE,
                             command.getName()
-                    );
+                    ));
                 case "rename":
                     String nameToRename = s.get(0);
                     String previousName = command.getName();
@@ -204,17 +193,17 @@ public class CustomCommandControl extends Command {
                     session.getTransaction().commit();
                     session.close();
 
-                    return Huinyabot.getInstance().getLocale().formattedText(
+                    return Optional.ofNullable(Huinyabot.getInstance().getLocale().formattedText(
                             channel.getPreferences().getLanguage(),
                             LineIds.C_CMD_SUCCESS_RENAME,
                             previousName,
                             nameToRename
-                    );
+                    ));
                 default:
                     break;
             }
         }
 
-        return null;
+        return Optional.empty();
     }
 }
